--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
-
   <body class="text-center">
-
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
         </div>
       </header>
-
       <main role="main" class="inner cover">
         <h1 class="cover-heading">InfoVis</h1>
         <p class="lead">Information visualization class portfolio.</p>
@@ -22,25 +19,22 @@
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Makeover Monday
           </a>
-
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week9/">Week 9</a>
-            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week10/">Week 10</a>
-            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week11/">Week 11</a>
-            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week13/">Week 13</a>
-            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week14/">Week 14</a>
-            <a class="dropdown-item" style="text-shadow:none" href="#">Week 15</a>
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week9/">Week 9 - Sleep Hours Needed Vs. Averaged</a>
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week10/">Week 10 - Violence Against Women & Girls</a>
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week11/">Week 11 - Self-reported Life Satisfaction vs GDP per capita</a>
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week13/">Week 13 - Does pineapple belong on a pizza?</a>
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week14/">Week 14 - Unpaid Work - Allocation of time and time-use</a>
+            <!-- <a class="dropdown-item" style="text-shadow:none" href="#">Week 15</a> -->
           </div>
         </div>
       </main>
-
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p>By <a href="https://github.com/cguzzetti">@cguzzetti</a>.</p>
         </div>
       </footer>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
