--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week11/">Week 11 - Self-reported Life Satisfaction vs GDP per capita</a>
             <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week13/">Week 13 - Does pineapple belong on a pizza?</a>
             <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week14/">Week 14 - Unpaid Work - Allocation of time and time-use</a>
-            <!-- <a class="dropdown-item" style="text-shadow:none" href="#">Week 15</a> -->
+            <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week15/">Week 15 - Messi Vs Ronaldo</a>
           </div>
         </div>
       </main>
