--- a/makeoverMonday/week15/index.html
+++ b/makeoverMonday/week15/index.html
@@ -20,7 +20,7 @@
       </header>
       <main role="main">
         <h3>Messi vs. Ronaldo</h3>
-        <p>[ Scores consider goals and asissts per match ]</p>
+        <p>[ Scores consider goals and assists per match ]</p>
         <div class="flourish-embed flourish-chart" data-src="visualisation/1938309" data-url="https://flo.uri.sh/visualisation/1938309/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
       </main>
       <footer class="mastfoot mt-auto">
