personal data project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week15/">Week 15 - Messi Vs Ronaldo</a>
           </div>
         </div>
+        <div>
+          <a class class="btn btn-secondary" href="https://cguzzetti.github.io/infoVis/personalData" role="button">Personal data project</a>
+        </div>
       </main>
       <footer class="mastfoot mt-auto">
         <div class="inner">
