personal data project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div>
-          <a class class="btn btn-secondary" href="https://cguzzetti.github.io/infoVis/personalData" role="button">Personal data project</a>
+        <button type="button" style="margin-top:20px" href="https://cguzzetti.github.io/infoVis/personalData" class="btn btn-light">Personal data project</button>
         </div>
       </main>
       <footer class="mastfoot mt-auto">
