personal data project

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <a class="dropdown-item" style="text-shadow:none" href="https://cguzzetti.github.io/infoVis/makeoverMonday/week15/">Week 15 - Messi Vs Ronaldo</a>
           </div>
         </div>
-        <div>
-        <button type="button" style="margin-top:20px" href="https://cguzzetti.github.io/infoVis/personalData" class="btn btn-light">Personal data project</button>
+        <div style="text-shadow:none">
+        <a role="button" style="margin-top:20px" href="https://cguzzetti.github.io/infoVis/personalData" class="btn btn-light">Personal data project</a>
         </div>
       </main>
       <footer class="mastfoot mt-auto">
